# agent-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  codecov.yml  pyproject.toml  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml  sonarcloud.yml
docs/: todo.md
docs/features/: agent_core.feature  bash.feature  chat.feature  chat_api.feature  compact.feature  file_read.feature  fitness-tracker-spec.md  live_file_preview.feature  mcp.feature  memory.feature  provider.feature  session.feature  skill.feature  token_counter.feature  tool_status.feature  web_fetch.feature
docs/features/app/: container_runner.feature  sandbox_pool.feature  smoke_tests.feature
docs/features/core/: agent_core.feature  code_search.feature  config.feature  file_edit.feature  file_list.feature  multimodal_input.feature  resumable_stream.feature  retry.feature  sandbox.feature  session.feature  subagent.feature  think.feature  (+2 more)
docs/plans/: agent-core-refactor.md
src/agent_app/: main.py
src/agent_core/: __init__.py  agent.py  compact.py  config.py  main.py  memory.py  multimodal.py  token_counter.py  tool_summary.py  types.py  usage_monitor.py
src/agent_demo/: __init__.py  agent.py  main.py  session.py  types.py  usage_monitor.py
static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_agent.py  test_anthropic_provider.py  test_api.py  test_bash.py  test_compact.py  test_config.py  test_file_edit.py  test_file_list.py  test_file_read.py  test_grep_search.py  test_mcp_adapter.py  test_memory.py  test_multimodal.py  test_placeholder.py  test_session_memory.py  test_session_sqlite.py  test_skill_registry.py  test_think.py  test_token_counter.py  test_tool_registry.py  test_tool_status.py  test_web_fetch.py  test_web_search.py
tests/app/: test_api.py
tests/core/: test_agent.py  test_anthropic_provider.py  test_bash.py  test_compact.py  test_config.py  test_event_store.py  test_file_edit.py  test_file_list.py  test_file_read.py  test_grep_search.py  test_mcp_adapter.py  test_retry.py  test_sandbox_integration.py  test_sandbox_local.py  test_session_memory.py  test_skill_registry.py  test_think.py  test_token_counter.py  test_tool_registry.py  test_tool_result_pagination.py  test_web_fetch.py  test_web_search.py
tests/eval/: __init__.py  conftest.py  framework.py  store.py  test_eval_runner.py
tests/manual/: test_smoke.py  test_smoke_extensibility.py  test_smoke_features.py  test_smoke_file_edit.py  test_smoke_file_list.py  test_smoke_file_read.py  test_smoke_parallel_tools.py  test_smoke_prompt_caching.py  test_smoke_resumable.py  test_smoke_web.py
(+49 files in other folders)
